--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.441.0",
-    "next": "15.0.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "^16.1.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
